--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Info Pendakian</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menus">Menus</string>
+    <string name="tips">Tips</string>
+    <string name="bantuan">Bantuan</string>
+
 </resources>
